# PROPOSAL-CREATION

./: .env.example  .gitignore  CLAUDE.md  docker-compose.prod.yml  docker-compose.yml
Validate/: Work_添付資料８.要求機能一覧.xlsx  (+3 more)
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 4e30f48e8c68_initial_schema.py  88785c2098b3_add_rationale_split_fields.py
backend/app/: main.py
backend/app/api/: cases.py  knowledge.py  mapping.py
backend/app/core/: config.py  database.py  dependencies.py  embedding.py  llm_client.py  neo4j_client.py
backend/app/models/: __init__.py  case.py  mapping_result.py  module_classification.py  requirement.py
backend/app/schemas/: __init__.py  case.py  column_mapping.py  mapping.py
backend/app/services/knowledge/: loader.py  master.py  parser.py  search.py
backend/app/services/mapping/: agent.py  state.py
backend/app/services/mapping/nodes/: analyze.py  evaluate.py  generate_proposal.py  generate_query.py  judge.py  search.py  traverse.py
backend/data/: module_classification_sap.csv
backend/scripts/: evaluate_accuracy.py  generate_module_csv.py  load_knowledge.py  reembed_scope_items.py  run_poc.py  setup_neo4j_indexes.py  spike_bpd_structure.py  spike_hybrid_search.py
backend/tests/: test_api_cases.py  test_api_mapping.py  test_batch_processor.py  test_bpd_parser.py  test_config.py  test_health.py  test_hybrid_search.py  test_llm_client.py  test_loader.py  test_mapping_nodes.py  test_mapping_state.py  test_module_master.py  test_pdf_parser.py  test_schemas.py
backend/tests/e2e/: test_full_flow.py
(+47 files in other folders)
